--- a/PrettyText-OC/Base.lproj/Main.storyboard
+++ b/PrettyText-OC/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="JsR-0A-nhQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,26 +9,26 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--First-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="First" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiA-11-PFS">
-                                <rect key="frame" x="10" y="50" width="355" height="21"/>
+                                <rect key="frame" x="10" y="30" width="355" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="JZU-1I-lti">
-                                <rect key="frame" x="37" y="193.5" width="300" height="200"/>
+                                <rect key="frame" x="37" y="161.5" width="300" height="200"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="73X-7K-nFS"/>
@@ -47,7 +47,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LV0-Wb-U5e">
-                                <rect key="frame" x="37.5" y="448.5" width="300" height="30"/>
+                                <rect key="frame" x="37.5" y="416.5" width="300" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="B3F-ew-DwY"/>
                                 </constraints>
@@ -55,19 +55,31 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnB-Zb-6Da">
+                                <rect key="frame" x="149.5" y="513" width="75" height="30"/>
+                                <color key="backgroundColor" red="0.84313725490000002" green="0.85098039219999999" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="HTML Test"/>
+                                <connections>
+                                    <segue destination="Qjs-y2-NaB" kind="show" id="aBn-jU-ccY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="DnB-Zb-6Da" secondAttribute="bottom" constant="60" id="85Q-LV-fea"/>
                             <constraint firstItem="NiA-11-PFS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="Phe-Sc-Mbi"/>
                             <constraint firstItem="JZU-1I-lti" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-40" id="RzL-kJ-FaW"/>
                             <constraint firstItem="NiA-11-PFS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="YFb-SL-REB"/>
                             <constraint firstItem="LV0-Wb-U5e" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="130" id="edZ-JP-uba"/>
                             <constraint firstAttribute="trailing" secondItem="NiA-11-PFS" secondAttribute="trailing" constant="10" id="fcU-lV-Sub"/>
+                            <constraint firstItem="DnB-Zb-6Da" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iT6-1p-F0t"/>
                             <constraint firstItem="JZU-1I-lti" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sgs-nY-Eau"/>
                             <constraint firstItem="LV0-Wb-U5e" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vEw-ES-WGz"/>
                             <constraint firstItem="NiA-11-PFS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zSZ-sS-8EN"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" id="Rli-RX-7o4"/>
                     <connections>
                         <outlet property="label" destination="NiA-11-PFS" id="VtD-E0-8fV"/>
                         <outlet property="textField" destination="LV0-Wb-U5e" id="OXi-IN-3gB"/>
@@ -76,6 +88,62 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="137.18140929535232"/>
+        </scene>
+        <!--Second-->
+        <scene sceneID="aB3-lO-oUB">
+            <objects>
+                <viewController id="Qjs-y2-NaB" userLabel="Second" customClass="SecondViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EWM-Ws-aMa"/>
+                        <viewControllerLayoutGuide type="bottom" id="g7q-rH-Deu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="d1n-Q0-9Yi">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nsz-eb-5fy">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nsz-eb-5fy" firstAttribute="leading" secondItem="d1n-Q0-9Yi" secondAttribute="leading" id="LWa-f6-3fG"/>
+                            <constraint firstAttribute="trailing" secondItem="nsz-eb-5fy" secondAttribute="trailing" id="Q0B-nr-kYb"/>
+                            <constraint firstItem="nsz-eb-5fy" firstAttribute="top" secondItem="EWM-Ws-aMa" secondAttribute="bottom" id="RfQ-E9-FG9"/>
+                            <constraint firstItem="g7q-rH-Deu" firstAttribute="top" secondItem="nsz-eb-5fy" secondAttribute="bottom" id="z3g-ly-OjQ"/>
+                        </constraints>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <connections>
+                        <outlet property="textView" destination="nsz-eb-5fy" id="fgF-KZ-dvz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cdQ-gi-eYF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1973.5999999999999" y="134.48275862068968"/>
+        </scene>
+        <!--Navigation-->
+        <scene sceneID="BIV-M7-vnR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JsR-0A-nhQ" userLabel="Navigation" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kHC-n9-QiU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Vjc-lg-Qjl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MqJ-1a-dMu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="17" y="137"/>
         </scene>
     </scenes>
 </document>
